--- a/page1.html
+++ b/page1.html
@@ -28,6 +28,7 @@
     <ul>
       <li title="This is a tooltip">Item 1</li>
       <li>Item 2</li>
+      <li>Item 3</li>
     </ul>
     <p>
       <a href="http://www.google.com">Google.com</a><br /><a
